<resources>
    <string name="app_name">TrivialNavidad</string>
    <!-- textos del menu-->
    <string name="mItm_GuardarSalir">Guardar y salir</string>
    <string name="mItm_guardar">Guardar Partida</string>
    <string name="mItm_numJugadores">Elegir el número de jugadores</string>
    <string name="mItm_instrucciones">Intrucciones del juego</string>
    <string name="intrucciones">Para poder ganar el juego es necesario resonder al menos una pregunta de cada color correctamente y llegar a la casilla morada y acertar todas las perguntas. Cuando aciertes una pregunta podrás volver a lanzar, si fallas será el turno del siguiente jugador.</string>
    <string name="mItm_acerca">Acerca de...</string>
    <string name="acercaDe">Juego desarrollado por Sergio Ramiro y Carlos Montequi</string>

    <!-- campos de texto -->
    <string name="t_tunroJugador">Turno del jugador: </string>

    <!-- botones de la vista principal -->
    <string name="bt_dado">tirar</string>
    <string name="bt_clasificacion">clasificacion</string>
    <string name="nombre_juego">Trivial</string>
    <string name="bt_offline">offline</string>
    <string name="bt_online">online</string>
    <string name="acierto">has acertado la pregunta</string>
    <string name="fallo">fallaste la pregunta</string>
    <string name="partidas">Partidas:</string>
    <string name="nueva_partida">Nueva Partida</string>
    <string name="cargar_partida">Cargar Partida</string>
    <string name="mItm_configuracion">Configuracion</string>
    <string name="mItm_inicio">Inicio</string>
    <string name="ganado">Has ganado el juego</string>
    <string name="turno_del_jugador">"Turno del jugador: "</string>
    <string name="tira_el_dado">Tira el dado</string>
    <string name="datos_guardados">Datos guardados</string>
    <string name="juego">Juego</string>
    <string name="internet_mensaje">Necesitas internet para jugar,se cerrara el juego</string>
    <string name="aceptar">Aceptar</string>
    <string name="mensaje_no_minijuego">No tienes suficientes quesitos , tira de nuevo</string>
    <string name="juego_final">Juego final</string>
    <string name="bt_volver">volver</string>
    <string name="has_acertado_sigue_jugando">Has acertado, sigue jugando</string>
    <string name="partida">Partida</string>
    <string name="finalizada">Finalizada</string>
    <string name="nombre">Nombre</string>
    <string name="clasificacion">Clasificacion:</string>
    <string name="volver">volver</string>
    <string name="mover">Mover</string>
    <string name="contrasena">Contraseña</string>
    <string name="musica">Musica</string>
    <string name="vibracion">Vibración</string>
    <string name="sonido">Sonido</string>
    <string name="cambiar_tema">Cambiar Tema</string>
    <string name="empezar_a_jugar">Empezar a jugar</string>
    <string name="anadir_jugador">Añadir jugador</string>
    <string name="error_tema">Solo se cambia el tema en la pantalla de inicio</string>
    <string name="configuracion">Configuración</string>
    <string name="partida_ganada">Partida ganada</string>
    <string name="jugador">jugador</string>
    <string name="ha_ganado_la_partida">ha ganado la partida</string>
    <string name="error">Error</string>
    <string name="error_server">No se ha podido conectar con el servidor</string>
    <string name="fallo_login_usuario">Usuario o contraseña incorrectos</string>
    <string name="usuario_loggeado">Usuario ya esta loggeado</string>
    <string name="rellenar_campos">Rellene todos los campos</string>
    <string name="requisitos_contrasena">La contraseña debe tener al menos 5 caracteres y una mayuscula y un numero</string>
    <string name="error_registro">Ya existe un usuario con ese nombre</string>
    <string name="limite_jugadores">No se pueden añadir mas jugadores</string>
    <string name="nombre_vacio">El nombre del jugador no puede estar vacío</string>
    <string name="nombre_repetido">El jugador no puede estar repetido</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
</resources>