<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/ch_musica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musica"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="39dp" />

    <CheckBox
        android:id="@+id/ch_vibracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibracion" />

    <CheckBox
        android:id="@+id/ch_sonido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sonido" />

    <CheckBox
        android:id="@+id/ch_temas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_tema" />


</LinearLayout>